--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@editorjs/table": "^2.4.3",
     "@tailwindcss/typography": "^0.5.16",
     "html-react-parser": "^5.2.2",
+    "jodit": "^4.5.17",
     "jodit-react": "^5.2.15",
     "next": "15.2.1",
     "react": "^19.0.0",
